--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ spectrwm (3.0.2-1) unstable; urgency=low
     - U01-fix-man-errors.diff
     - U02-improve-linking.diff
       - Minimize library dependencies
+    - U02-enable-pie.diff
+      - Provide additional hardening
 
   * Updated patches
     - D01-adapt-libswmhack.diff
@@ -33,7 +35,7 @@ spectrwm (3.0.2-1) unstable; urgency=low
     - Update Standards-Version to 3.9.8
       - No changes needed
 
- -- Andrea Bolognani <eof@kiyuko.org>  Sun, 17 Jul 2016 18:26:45 +0200
+ -- Andrea Bolognani <eof@kiyuko.org>  Sun, 31 Jul 2016 19:35:03 +0200
 
 spectrwm (2.6.0-1) unstable; urgency=low
 
