Enable +bindnow hardening option

--- a/debian/changelog
+++ b/debian/changelog
@@ -30,12 +30,13 @@ spectrwm (3.0.2-1) unstable; urgency=low
       - No longer needed (see above)
 
   * Other
+    - Enable +bindnow hardening option
     - Update Homepage: and others to point to GitHub
     - Use HTTPS wherever possible
     - Update Standards-Version to 3.9.8
       - No changes needed
 
- -- Andrea Bolognani <eof@kiyuko.org>  Sun, 31 Jul 2016 19:35:03 +0200
+ -- Andrea Bolognani <eof@kiyuko.org>  Sun, 31 Jul 2016 19:45:51 +0200
 
 spectrwm (2.6.0-1) unstable; urgency=low
 
