--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,13 @@ spectrwm (3.1.0-1) unstable; urgency=medium
 
   * New upstream release
 
- -- Andrea Bolognani <eof@kiyuko.org>  Thu, 30 Nov 2017 12:24:18 +0100
+  * Patches
+    - U01-fix-man-errors.diff
+    - U02-improve-linking.diff
+    - U03-enable-pie.diff
+      - Dropped (merged upstream)
+
+ -- Andrea Bolognani <eof@kiyuko.org>  Thu, 30 Nov 2017 12:25:46 +0100
 
 spectrwm (3.0.2-1) unstable; urgency=low
 
