Update Standards-Version to 4.1.2

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,8 +10,10 @@ spectrwm (3.1.0-1) unstable; urgency=medium
 
   * Other
     - Move to debhelper compatibility level 10
+    - Update Standards-Version to 4.1.2
+      - Use Format: https://... in Debian copyright file
 
- -- Andrea Bolognani <eof@kiyuko.org>  Thu, 30 Nov 2017 18:18:25 +0100
+ -- Andrea Bolognani <eof@kiyuko.org>  Thu, 30 Nov 2017 18:45:16 +0100
 
 spectrwm (3.0.2-1) unstable; urgency=low
 
