--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+spectrwm (3.1.0-2) unstable; urgency=low
+
+  * autopkgtest
+    - Add smoke test
+
+ -- Andrea Bolognani <eof@kiyuko.org>  Tue, 05 Dec 2017 20:24:15 +0100
+
 spectrwm (3.1.0-1) unstable; urgency=medium
 
   * New upstream release
