--- a/debian/changelog
+++ b/debian/changelog
@@ -7,9 +7,11 @@ spectrwm (3.1.0-2) unstable; urgency=low
     - Switch to compat level 11
 
   * Other
+    - Update Standards-Version to 4.1.3
+      - No changes needed
     - Permit Rules-Requires-Root: no
 
- -- Andrea Bolognani <eof@kiyuko.org>  Sun, 28 Jan 2018 18:12:09 +0100
+ -- Andrea Bolognani <eof@kiyuko.org>  Sun, 28 Jan 2018 18:13:32 +0100
 
 spectrwm (3.1.0-1) unstable; urgency=medium
 
