--- a/debian/changelog
+++ b/debian/changelog
@@ -10,8 +10,9 @@ spectrwm (3.1.0-2) unstable; urgency=low
     - Update Standards-Version to 4.1.3
       - No changes needed
     - Permit Rules-Requires-Root: no
+    - Point Vcs-*: to salsa.debian.org
 
- -- Andrea Bolognani <eof@kiyuko.org>  Sun, 28 Jan 2018 18:13:32 +0100
+ -- Andrea Bolognani <eof@kiyuko.org>  Sun, 28 Jan 2018 18:18:45 +0100
 
 spectrwm (3.1.0-1) unstable; urgency=medium
 
