--- a/debian/changelog
+++ b/debian/changelog
@@ -7,7 +7,11 @@ spectrwm (3.1.0-3) unstable; urgency=low
     - U01-add-keywords-to-desktop-file.diff
       - Makes Lintian happy
 
- -- Andrea Bolognani <eof@kiyuko.org>  Sun, 18 Feb 2018 21:58:43 +0100
+  * Other
+    - Update Standards-Version to 4.1.4
+      - No changes needed
+
+ -- Andrea Bolognani <eof@kiyuko.org>  Sun, 08 Apr 2018 16:20:51 +0200
 
 spectrwm (3.1.0-2) unstable; urgency=low
 
