Imported Upstream version 3.2.0

--- a/spectrwm.1
+++ b/spectrwm.1
@@ -1,6 +1,6 @@
 .\" Copyright (c) 2009-2012 Marco Peereboom <marco@peereboom.us>
 .\" Copyright (c) 2009 Darrin Chandler <dwchandler@stilyagin.com>
-.\" Copyright (c) 2011-2015 Reginald Kennedy <rk@rejii.com>
+.\" Copyright (c) 2011-2018 Reginald Kennedy <rk@rejii.com>
 .\" Copyright (c) 2011-2012 Lawrence Teo <lteo@lteo.net>
 .\" Copyright (c) 2011-2012 Tiago Cunha <tcunha@gmx.com>
 .\" Copyright (c) 2012 David Hill <dhill@mindcry.org>
@@ -17,7 +17,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate: February 15 2012 $
+.Dd $Mdocdate: August 29 2018 $
 .Dt SPECTRWM 1
 .Os
 .Sh NAME
@@ -100,8 +100,7 @@ Note that workspace mapping is handled via
 .Pa libswmhack.so .
 When
 .Ic autorun
-spawns windows via a daemon, ensure the daemon is started
-with the correct
+spawns windows via a daemon, ensure the daemon is started with the correct
 .Pa LD_PRELOAD
 in its environment.
 .Pp
@@ -212,6 +211,7 @@ It may contain the following character sequences:
 .It Li "+D" Ta "Workspace name"
 .It Li "+F" Ta "Floating indicator"
 .It Li "+I" Ta "Workspace index"
+.It Li "+L" Ta "Workspace list indicator"
 .It Li "+M" Ta "Number of iconic (minimized) windows in workspace"
 .It Li "+N" Ta "Screen number"
 .It Li "+P" Ta "Window class and instance separated by a colon"
@@ -225,12 +225,13 @@ It may contain the following character sequences:
 .El
 .Pp
 All character sequences may limit its output to a specific length, for
-example +64A. By default, no padding/alignment is done in case the
-length of the replaced string is less than the specified length (64 in
-the example). The padding/alignment can be enabled using a '_' character
-in the sequence. For example: +_64W, +64_W and +_64_W enable padding before
-(right alignment), after (left alignment), and both before and after
-(center alignment) window name, respectively.
+example +64A.
+By default, no padding/alignment is done in case the length of the replaced
+string is less than the specified length (64 in the example).
+The padding/alignment can be enabled using a '_' character in the sequence.
+For example: +_64W, +64_W and +_64_W enable padding before (right alignment),
+after (left alignment), and both before and after (center alignment) window
+name, respectively.
 Any characters that don't match the specification are copied as-is.
 .It Ic bar_justify
 Justify the status bar text.
@@ -240,9 +241,8 @@ Possible values are
 and
 .Ar right .
 .Pp
-Note that if the output is not left justified, it may not be properly
-aligned in some circumstances, due to the white-spaces in the default
-static format.
+Note that if the output is not left justified, it may not be properly aligned
+in some circumstances, due to the white-spaces in the default static format.
 See the
 .Ic bar_format
 option for more details.
@@ -257,8 +257,8 @@ Set window border thickness in pixels.
 Disable all borders by setting to 0.
 .It Ic boundary_width
 Set region containment boundary width in pixels.
-This is how far a window must be dragged/resized (with the pointer)
-beyond the region edge before it is allowed outside the region.
+This is how far a window must be dragged/resized (with the pointer) beyond the
+region edge before it is allowed outside the region.
 Disable the window containment effect by setting to 0.
 .It Ic clock_enabled
 Enable or disable displaying the clock in the status bar.
@@ -287,8 +287,7 @@ Some applications have dialogue windows that are too small to be useful.
 This ratio is the screen size to what they will be resized.
 For example, 0.6 is 60% of the physical screen size.
 .It Ic disable_border
-Remove border when bar is disabled and there is only one window on the
-region.
+Remove border when bar is disabled and there is only one window on the region.
 .It Ic focus_close
 Window to put focus when the focused window is closed.
 Possible values are
@@ -342,10 +341,11 @@ for several keyboard layouts.
 .It Ic layout
 Select layout to use at start-of-day.
 Defined in the format
-.Li ws Ns Bo Ar idx Bc : Ns Ar master_grow : Ns Ar master_add : Ns Ar stack_inc : Ns Ar always_raise : Ns Ar stack_mode ,
-e.g. ws[2]:-4:0:1:0:horizontal sets worskspace 2 to the horizontal stack
-mode, shrinks the master area by 4 ticks and adds one window to the
-stack, while maintaining default floating window behavior.
+.Li ws Ns Bo Ar idx Bc : Ns Ar master_grow : Ns Ar master_add : Ns Ar \
+stack_inc : Ns Ar always_raise : Ns Ar stack_mode ,
+e.g. ws[2]:-4:0:1:0:horizontal sets worskspace 2 to the horizontal stack mode,
+shrinks the master area by 4 ticks and adds one window to the stack, while
+maintaining default floating window behavior.
 Possible
 .Ar stack_mode
 values are
@@ -354,7 +354,7 @@ values are
 .Ar horizontal ,
 .Ar horizontal_flip
 and
-.Ar fullscreen .
+.Ar max .
 .Pp
 See
 .Ic master_grow ,
@@ -368,8 +368,8 @@ and
 .Ic always_raise
 for more information.
 Note that the stacking options are complicated and have side-effects.
-One should familiarize oneself with these commands before experimenting
-with the
+One should familiarize oneself with these commands before experimenting with
+the
 .Ic layout
 option.
 .Pp
@@ -389,13 +389,14 @@ Define new action to spawn a program
 See the
 .Sx PROGRAMS
 section below.
-.It Ic quirk Ns Bq Ar c Ns Li : Ns Ar i Ns Li : Ns Ar n
+.It Ic quirk Ns Bq Ar c Ns Bq : Ns Ar i Ns Bq : Ns Ar n
 Add "quirk" for windows with class
 .Ar c ,
 instance
 .Ar i
-and name
-.Ar n .
+(optional) and name
+.Ar n
+(optional).
 See the
 .Sx QUIRKS
 section below.
@@ -403,7 +404,8 @@ section below.
 Allocates a custom region, removing any autodetected regions which occupy the
 same space on the screen.
 Defined in the format
-.Li screen Ns Bo Ar idx Ns Bc : Ns Ar width Ns x Ns Ar height Ns + Ns Ar x Ns + Ns Ar y ,
+.Li screen Ns Bo Ar idx Ns Bc : Ns Ar width Ns x Ns Ar height Ns + Ns Ar x Ns \
++ Ns Ar y ,
 e.g. screen[1]:800x1200+0+0.
 .Pp
 To make a region span multiple monitors, create a region big enough to cover
@@ -426,8 +428,7 @@ and
 .Ar previous
 are relative to the focused window.
 .It Ic stack_enabled
-Enable or disable displaying the current stacking algorithm in the status
-bar.
+Enable or disable displaying the current stacking algorithm in the status bar.
 .It Ic term_width
 Set a preferred minimum width for the terminal.
 If this value is greater than 0,
@@ -469,8 +470,8 @@ for example, one needs to add the following line to
 xterm.bellIsUrgent: true
 .Ed
 .It Ic verbose_layout
-Enable or disable displaying the current master window count and stack column/row
-count in the status bar.
+Enable or disable displaying the current master window count and stack
+column/row count in the status bar.
 Enable by setting to 1.
 See
 .Ar master_add ,
@@ -497,8 +498,8 @@ Enable or disable displaying the window instance name (from WM_CLASS) in the
 status bar.
 Enable by setting to 1.
 .It Ic window_name_enabled
-Enable or disable displaying the window display name (from _NET_WM_NAME/WM_NAME)
-in the status bar.
+Enable or disable displaying the window display name
+(from _NET_WM_NAME/WM_NAME) in the status bar.
 Enable by setting to 1.
 .Pp
 To prevent excessively large window names from pushing the remaining text off
@@ -514,17 +515,47 @@ region and
 is enabled, focus on the region with the target workspace.
 Enable by setting to 1.
 .It Ic warp_pointer
-Centers the pointer on the focused window when using bindings to
-change focus, switch workspaces, change regions, etc.
+Centers the pointer on the focused window when using bindings to change focus,
+switch workspaces, change regions, etc.
 Enable by setting to 1.
+.It Ic workspace_indicator
+Configure the status bar workspace indicator.
+One or more of the following options may be specified in a comma-separated
+list:
+.Pp
+.Bl -tag -width "markcurrentXXX" -offset indent -compact
+.It Ar listcurrent
+Include the current workspace.
+.It Ar listactive
+Include workspaces with windows.
+.It Ar listempty
+Include empty workspaces.
+.It Ar listnamed
+Include named workspaces.
+.It Ar listurgent
+Include workspaces with urgent window(s).
+.It Ar listall
+Include all workspaces.
+.It Ar hidecurrent
+Always exclude the current workspace from the list.
+.It Ar markcurrent
+Indicate the current workspace if it is in the list.
+.It Ar markurgent
+Indicate workspaces in the list that contain urgent window(s).
+.It Ar printnames
+Display the names of named workspaces in the list.
+.El
+.Pp
+The default is
+.Ar listcurrent , Ns Ar listactive , Ns Ar markcurrent , Ns Ar printnames
 .It Ic workspace_limit
 Set the total number of workspaces available.
 Minimum is 1, maximum is 22, default is 10.
 .El
 .Sh PROGRAMS
 .Nm
-allows you to define custom actions to launch programs of your choice and
-then bind them the same as with built-in actions.
+allows you to define custom actions to launch programs of your choice and then
+bind them the same as with built-in actions.
 See the
 .Sx BINDINGS
 section below.
@@ -544,8 +575,8 @@ Remember that when using
 .Ql #
 in your program call, it must be escaped with a backslash, i.e. \e#
 .Pp
-The following argument variables will be substituted for values at the time the program
-is spawned:
+The following argument variables will be substituted for values at the time the
+program is spawned:
 .Pp
 .Bl -tag -width "$bar_font_color" -offset indent -compact
 .It Cm $bar_border
@@ -582,11 +613,11 @@ xterm
 .It Cm lock
 xlock
 .It Cm menu
-dmenu_run $dmenu_bottom \-fn $bar_font \-nb $bar_color \-nf $bar_font_color \-sb
-$bar_color_selected \-sf $bar_font_color_selected
+dmenu_run $dmenu_bottom \-fn $bar_font \-nb $bar_color \-nf $bar_font_color
+\-sb $bar_color_selected \-sf $bar_font_color_selected
 .It Cm search
-dmenu $dmenu_bottom \-i \-fn $bar_font \-nb $bar_color \-nf $bar_font_color \-sb
-$bar_color_selected \-sf $bar_font_color_selected
+dmenu $dmenu_bottom \-i \-fn $bar_font \-nb $bar_color \-nf $bar_font_color
+\-sb $bar_color_selected \-sf $bar_font_color_selected
 .It Cm name_workspace
 dmenu $dmenu_bottom \-p Workspace \-fn $bar_font \-nb $bar_color \-nf
 $bar_font_color \-sb $bar_color_selected \-sf $bar_font_color_selected
@@ -599,9 +630,9 @@ screenshot.sh window # optional
 .El
 .Pp
 Note that optional default programs will not be validated unless overridden.
-If a default program fails validation, you can resolve the exception
-by installing the program, modifying the program call or disabling the program
-by freeing the respective binding.
+If a default program fails validation, you can resolve the exception by
+installing the program, modifying the program call or disabling the program by
+freeing the respective binding.
 .Pp
 For example, to override
 .Ic lock :
@@ -642,6 +673,12 @@ restart
 cycle_layout
 .It Cm M-S-\e
 flip_layout
+.It Aq Ar unbound
+layout_vertical
+.It Aq Ar unbound
+layout_horizontal
+.It Aq Ar unbound
+layout_max
 .It Cm M-S- Ns Aq Cm Space
 stack_reset
 .It Aq Ar unbound
@@ -650,13 +687,13 @@ stack_balance
 master_shrink
 .It Cm M-l
 master_grow
-.It Cm M-,
+.It Cm M-,\&
 master_add
-.It Cm M-.
+.It Cm M-.\&
 master_del
-.It Cm M-S-,
+.It Cm M-S-,\&
 stack_inc
-.It Cm M-S-.
+.It Cm M-S-.\&
 stack_dec
 .It Cm M- Ns Aq Cm Return
 swap_main
@@ -700,6 +737,8 @@ mvrg_next
 mvrg_prev
 .It Aq Ar unbound
 ws_empty
+.It Aq Ar unbound
+ws_empty_move
 .It Cm M- Ns Aq Cm Right
 ws_next
 .It Cm M- Ns Aq Cm Left
@@ -758,11 +797,11 @@ height_shrink
 height_grow
 .It Cm M-[
 move_left
-.It Cm M-]
+.It Cm M-]\&
 move_right
 .It Cm M-S-[
 move_up
-.It Cm M-S-]
+.It Cm M-S-]\&
 move_down
 .It Cm M-S-/
 name_workspace
@@ -774,7 +813,7 @@ search_win
 .Pp
 The action names and descriptions are listed below:
 .Pp
-.Bl -tag -width "M-j, M-<TAB>XXXX" -offset indent -compact
+.Bl -tag -width "layout_horizontalX" -offset indent -compact
 .It Cm focus
 Focus window/region under pointer.
 .It Cm move
@@ -786,13 +825,11 @@ Same as
 .Ic resize
 but keep window centered.
 .It Cm term
-Spawn a new terminal
-(see
+Spawn a new terminal (see
 .Sx PROGRAMS
 above).
 .It Cm menu
-Menu
-(see
+Menu (see
 .Sx PROGRAMS
 above).
 .It Cm quit
@@ -805,6 +842,12 @@ Restart
 Cycle layout.
 .It Cm flip_layout
 Swap the master and stacking areas.
+.It Cm layout_vertical
+Switch to vertical layout.
+.It Cm layout_horizontal
+Switch to horizontal layout.
+.It Cm layout_max
+Switch to max layout.
 .It Cm stack_reset
 Reset layout.
 .It Cm stack_balance
@@ -876,6 +919,8 @@ Move current window to workspace in next region.
 Move current window to workspace in previous region.
 .It Cm ws_empty
 Switch to the first empty workspace.
+.It Cm ws_empty_move
+Switch to the first empty workspace and move current window.
 .It Cm ws_next
 Switch to next workspace with a window in it.
 .It Cm ws_prev
@@ -899,13 +944,11 @@ Switch region to next screen.
 .It Cm rg_move_prev
 Switch region to previous screen.
 .It Cm screenshot_all
-Take screenshot of entire screen (if enabled)
-(see
+Take screenshot of entire screen (if enabled) (see
 .Sx PROGRAMS
 above).
 .It Cm screenshot_wind
-Take screenshot of selected window (if enabled)
-(see
+Take screenshot of selected window (if enabled) (see
 .Sx PROGRAMS
 above).
 .It Cm version
@@ -913,13 +956,11 @@ Toggle version in status bar.
 .It Cm float_toggle
 Toggle focused window between tiled and floating.
 .It Cm lock
-Lock screen
-(see
+Lock screen (see
 .Sx PROGRAMS
 above).
 .It Cm initscr
-Reinitialize physical screens
-(see
+Reinitialize physical screens (see
 .Sx PROGRAMS
 above).
 .It Cm iconify
@@ -970,7 +1011,7 @@ Custom bindings in the configuration file are specified as follows:
 is one of the actions listed above (or empty to unbind) and
 .Ar combo
 is in the form of zero or more modifier keys and/or special arguments
-(Mod1, Shift, MOD, etc.) and a normal key (b, Space, etc.)
+(Mod1, Shift, MOD, etc.) and a normal key (b, Space, etc)
 or a button (Button1 .. Button255), separated by
 .Ql + .
 Multiple key/button combinations may be bound to the same action.
@@ -983,7 +1024,8 @@ Substituted for the currently defined
 .It Cm ANYMOD
 Select all modifier combinations not handled by another binding.
 .It Cm REPLAY
-Reprocess binding press/release events for other programs to handle.  Unavailable for
+Reprocess binding press/release events for other programs to handle.
+Unavailable for
 .Ic move ,
 .Ic resize
 and
@@ -1012,8 +1054,8 @@ initiates
 .Ic move
 and
 .Aq Cm Button3
-pressed with any other combination of modifiers
-sets focus to the window/region under the pointer.
+pressed with any other combination of modifiers sets focus to the window/region
+under the pointer.
 .Pp
 .Cm REPLAY
 example:
@@ -1050,12 +1092,10 @@ add:
 bind[program] = MOD+aring
 .Ed
 .Sh KEYBOARD MAPPING FILES
-Keyboard mapping files for several keyboard layouts are listed
-below.
+Keyboard mapping files for several keyboard layouts are listed below.
 These files can be used with the
 .Ic keyboard_mapping
-setting to load pre-defined key bindings for the specified
-keyboard layout.
+setting to load pre-defined key bindings for the specified keyboard layout.
 .Pp
 .Bl -tag -width "spectrwm_XX.confXXX" -offset indent -compact
 .It Cm spectrwm_cz.conf
@@ -1073,8 +1113,8 @@ United States keyboard layout
 .El
 .Sh QUIRKS
 .Nm
-provides "quirks" which handle windows that must be treated specially
-in a tiling window manager, such as some dialogs and fullscreen apps.
+provides "quirks" which handle windows that must be treated specially in a
+tiling window manager, such as some dialogs and fullscreen apps.
 .Pp
 The default quirks are described below:
 .Pp
@@ -1116,29 +1156,29 @@ Allow window to position itself, uncentered.
 .It FLOAT
 This window should not be tiled, but allowed to float freely.
 .It FOCUSONMAP_SINGLE
-When the window first appears on the screen, change focus to the window
-if there are no other windows on the workspace with the same WM_CLASS
+When the window first appears on the screen, change focus to the window if
+there are no other windows on the workspace with the same WM_CLASS
 class/instance value.
 Has no effect when
 .Ic focus_mode
 is set to
 .Ar follow .
 .It FOCUSPREV
-On exit force focus on previously focused application not previous
-application in the stack.
+On exit force focus on previously focused application not previous application
+in the stack.
 .It FULLSCREEN
 Remove border to allow window to use full region size.
 .It IGNOREPID
 Ignore the PID when determining the initial workspace for a new window.
 Especially useful for terminal windows that share a process.
 .It IGNORESPAWNWS
-Ignore the spawn workspace when determining the initial workspace for a
-new window.
+Ignore the spawn workspace when determining the initial workspace for a new
+window.
 .It MINIMALBORDER
 Remove border when window is unfocused and floating.
 .It NOFOCUSCYCLE
-Remove from normal focus cycle (focus_prev or focus_next). The window can
-still be focused using search_win.
+Remove from normal focus cycle (focus_prev or focus_next). The window can still
+be focused using search_win.
 .It NOFOCUSONMAP
 Don't change focus to the window when it first appears on the screen.
 Has no effect when
@@ -1166,7 +1206,8 @@ fonts when resizing.
 .Pp
 Custom quirks in the configuration file are specified as follows:
 .Pp
-.Dl quirk Ns Bo Ar class Ns Bo : Ns Ar instance Ns Bo : Ns Ar name Bc Bc Bc = Ar quirk Op + Ar quirk ...
+.Dl quirk Ns Bo Ar class Ns Bo : Ns Ar instance Ns Bo : Ns Ar name Bc Bc Bc \
+= Ar quirk Op + Ar quirk ...
 .Pp
 .Ar class ,
 .Ar instance
@@ -1192,9 +1233,10 @@ quirk[.*:.*:.*] = FLOAT # Same as above.
 quirk[Firefox:Navigator] = FLOAT # Float all Firefox browser windows.
 quirk[::Console] = FLOAT # Float windows with WM_CLASS not set and a \
 window name of 'Console'.
-quirk[\\[0-9\\].*:.*:\\[\\[\\:alnum\\:\\]\\]*] = FLOAT # Float windows with WM_CLASS \
-class beginning with a number, any WM_CLASS instance and a \
-_NET_WM_NAME/WM_NAME either blank or containing alphanumeric characters without spaces.
+quirk[\\[0-9\\].*:.*:\\[\\[\\:alnum\\:\\]\\]*] = FLOAT # Float windows with \
+WM_CLASS class beginning with a number, any WM_CLASS instance and a \
+_NET_WM_NAME/WM_NAME either blank or containing alphanumeric characters \
+without spaces.
 quirk[pcb:pcb] = NONE # remove existing quirk
 .Ed
 .Pp
@@ -1227,8 +1269,8 @@ quirk[Firefox:Navigator] = FLOAT
 .Ed
 .Pp
 .Nm
-also automatically assigns quirks to windows based on the value
-of the window's _NET_WM_WINDOW_TYPE property as follows:
+also automatically assigns quirks to windows based on the value of the window's
+_NET_WM_WINDOW_TYPE property as follows:
 .Pp
 .Bl -tag -width "_NET_WM_WINDOW_TYPE_TOOLBAR<TAB>XXX" -offset indent -compact
 .It _NET_WM_WINDOW_TYPE_DOCK
@@ -1254,18 +1296,17 @@ itself from external scripts and programs.
 This is achieved by
 .Nm
 responding to certain ClientMessage events.
-From the terminal these events
-can be conveniently sent using tools such as
+From the terminal these events can be conveniently sent using tools such as
 .Xr wmctrl 1
 and
 .Xr xdotool 1 .
-For the
-actual format of these ClientMessage events, see the EWMH specification.
+For the actual format of these ClientMessage events, see the EWMH
+specification.
 .Pp
 The id of the currently focused window is stored in the _NET_ACTIVE_WINDOW
 property of the root window.
-This can be used for example to retrieve the
-title of the currently active window with
+This can be used for example to retrieve the title of the currently active
+window with
 .Xr xprop 1
 and
 .Xr grep 1 :
@@ -1274,8 +1315,8 @@ $ WINDOWID=`xprop \-root _NET_ACTIVE_WINDOW | grep \-o "0x.*"`
 $ xprop \-id $WINDOWID _NET_WM_NAME | grep \-o "\\".*\\""
 .Ed
 .Pp
-A window can be focused by sending a _NET_ACTIVE_WINDOW client message
-to the root window.
+A window can be focused by sending a _NET_ACTIVE_WINDOW client message to the
+root window.
 For example, using
 .Xr wmctrl 1
 to send the message
@@ -1284,8 +1325,8 @@ to send the message
 $ wmctrl \-i \-a 0x4a0000b
 .Ed
 .Pp
-Windows can be closed by sending a _NET_CLOSE_WINDOW client message
-to the root window.
+Windows can be closed by sending a _NET_CLOSE_WINDOW client message to the root
+window.
 For example, using
 .Xr wmctrl 1
 to send the message
@@ -1296,13 +1337,12 @@ $ wmctrl \-i \-c 0x4a0000b
 .Pp
 Windows can be floated and un-floated by adding or removing the
 _NET_WM_STATE_ABOVE atom from the _NET_WM_STATE property of the window.
-This can be achieved by sending a _NET_WM_STATE client message to the
-root window.
-For example, the following toggles the floating state of
-a window using
+This can be achieved by sending a _NET_WM_STATE client message to the root
+window.
+For example, the following toggles the floating state of a window using
 .Xr wmctrl 1
-to send the message (assuming 0x4a0000b is the id of the window to be
-floated or un-floated):
+to send the message (assuming 0x4a0000b is the id of the window to be floated
+or un-floated):
 .Bd -literal -offset indent
 $ wmctrl \-i \-r 0x4a0000b \-b toggle,_NET_WM_STATE_ABOVE
 .Ed
@@ -1315,11 +1355,10 @@ $ wmctrl \-i \-r 0x4a0000b \-b toggle,_NET_WM_STATE_HIDDEN
 .Pp
 Floating windows can also be resized and moved by sending a
 _NET_MOVERESIZE_WINDOW client message to the root window.
-For example,
-using
+For example, using
 .Xr wmctrl 1
-to send the message (assuming 0x4a0000b is the id of
-the window to be resize/moved):
+to send the message (assuming 0x4a0000b is the id of the window to be
+resize/moved):
 .Bd -literal -offset indent
 $ wmctrl \-i \-r 0x4a0000b \-e 0,100,50,640,480
 .Ed
@@ -1350,14 +1389,14 @@ was written by:
 .Pp
 .Bl -tag -width "Ryan Thomas McBride Aq mcbride@countersiege.com " -offset \
 indent -compact
-.It Cm Marco Peereboom Aq marco@peereboom.us
-.It Cm Ryan Thomas McBride Aq mcbride@countersiege.com
-.It Cm Darrin Chandler Aq dwchandler@stilyagin.com
-.It Cm Pierre-Yves Ritschard Aq pyr@spootnik.org
-.It Cm Tuukka Kataja Aq stuge@xor.fi
-.It Cm Jason L. Wright Aq jason@thought.net
-.It Cm Reginald Kennedy Aq rk@rejii.com
-.It Cm Lawrence Teo Aq lteo@lteo.net
-.It Cm Tiago Cunha Aq tcunha@gmx.com
-.It Cm David Hill Aq dhill@mindcry.org
+.It An Marco Peereboom Aq Mt marco@peereboom.us
+.It An Ryan Thomas McBride Aq Mt mcbride@countersiege.com
+.It An Darrin Chandler Aq Mt dwchandler@stilyagin.com
+.It An Pierre-Yves Ritschard Aq Mt pyr@spootnik.org
+.It An Tuukka Kataja Aq Mt stuge@xor.fi
+.It An Jason L. Wright Aq Mt jason@thought.net
+.It An Reginald Kennedy Aq Mt rk@rejii.com
+.It An Lawrence Teo Aq Mt lteo@lteo.net
+.It An Tiago Cunha Aq Mt tcunha@gmx.com
+.It An David Hill Aq Mt dhill@mindcry.org
 .El
