--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+spectrwm (3.2.0-1) unstable; urgency=low
+
+  * New upstream release
+
+ -- Andrea Bolognani <eof@kiyuko.org>  Sun, 09 Sep 2018 15:58:46 +0200
+
 spectrwm (3.1.0-4) unstable; urgency=low
 
   * debhelper
