Install from debian/tmp
Intead of relying on upstream's build system installing the
right stuff in the right places, use debian/tmp as a staging
area and pick up stuff from there explicitly.

This will make it less likely that unwanted files will sneak
into the binary package and allow us to use upstream's build
system before needing to patch it first.

--- a/debian/install
+++ b/debian/install
@@ -1,1 +1,5 @@
 spectrwm.conf etc
+usr/bin/spectrwm
+usr/lib/spectrwm/libswmhack.so
+usr/lib/spectrwm/libswmhack.so.0*
+usr/share/xsessions/spectrwm.desktop
