Drop D03-skip-compatibility-symlinks.diff
Now that we're using debian/tmp as a staging area, we no
longer need to prevent upstream's build system from creating
compatibility symlinks and can thus drop this patch.

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ spectrwm (3.2.0-1) unstable; urgency=low
   * Patches:
     - U01-add-keywords-to-desktop-file.diff
       - Dropped (merged upstream)
+    - D03-skip-compatibility-symlinks.diff
+      - Dropped (no longer needed)
 
  -- Andrea Bolognani <eof@kiyuko.org>  Sun, 09 Sep 2018 15:58:46 +0200
 
