Update Standards-Version to 4.2.1
No changes needed.

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,10 @@ spectrwm (3.2.0-1) unstable; urgency=low
     - D03-skip-compatibility-symlinks.diff
       - Dropped (no longer needed)
 
+  * Other
+    - Update Standards-Version to 4.2.1
+      - No changes needed
+
  -- Andrea Bolognani <eof@kiyuko.org>  Sun, 09 Sep 2018 15:58:46 +0200
 
 spectrwm (3.1.0-4) unstable; urgency=low
