New Debian version 3.3.0-1

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,27 @@
+spectrwm (3.3.0-1) unstable; urgency=medium
+
+  * New upstream release.
+
+  * Patches
+    + Drop Install-more-files.patch
+      - Merged upstream
+    + Add linux-Accept-user-provided-pkg-config-command.patch
+      - Kindly provided by Helmut Grohne. Along with some changes to
+        debian/rules, also suggested by Helmut, this makes it possible
+        to successfully cross-build spectrwm.
+      - Closes: #928902 (FTCBFS: uses build architecture build tools)
+    + Add Fix-man-warning.patch
+    + Add linux-Install-examples.patch
+
+  * debhelper
+    + Switch to compat level 12
+
+  * Other
+    + Update Standards-Version to 4.5.0
+      - No changes needed
+
+ -- Andrea Bolognani <eof@kiyuko.org>  Sun, 29 Mar 2020 18:33:58 +0200
+
 spectrwm (3.2.0-1) unstable; urgency=low
 
   * New upstream release
